--- a/popup.html
+++ b/popup.html
@@ -4,21 +4,81 @@
         <link rel="stylesheet" type="text/css" href="popup.css">
     </head>
     <body>
-        <section class="interface">
-            <div>
+<section class="interface">
+            <div class="infocontainer">
                 <img id="wplogo" src="icons/iconblack.png">
                 <h3>WP S&R</h3>
                 <p>CLI hot bar tool to help speed through mixed content </p>
-                <button id="runevent" onclick="alert()">Run S&R
-                </button>
+                </div>
+ </section>
+
+
+<!-- Domain Fields (Eight in Total)-->
+<section class="domaincontainer">
+            <div class="field">
+              <label class="label is-normal">Domain</label>
+              <div class="control has-icons-left has-icons-right">
+                <input class="input is-normal" placeholder="http URL">
+              </div>
             </div>
-        </section>
+        <!-- Quick field spacer-->
+        <div class="field">
+            <label class="label is-normal">Domain</label>
+            <div class="control has-icons-left has-icons-right">
+              <input class="input is-normal" placeholder="http URL">
+            </div>
+          </div>
+      <!-- Quick field spacer-->
+      <div class="field">
+        <label class="label is-normal">Domain</label>
+        <div class="control has-icons-left has-icons-right">
+          <input class="input is-normal" placeholder="http URL">
+        </div>
+      </div>
+  <!-- Quick field spacer-->
+  <div class="field">
+    <label class="label is-normal">Domain</label>
+    <div class="control has-icons-left has-icons-right">
+      <input class="input is-normal" placeholder="http URL">
+    </div>
+  </div>
+<!-- Quick field spacer-->
+<div class="field">
+    <label class="label is-normal">Domain</label>
+    <div class="control has-icons-left has-icons-right">
+      <input class="input is-normal" placeholder="http URL">
+    </div>
+  </div>
+<!-- Quick field spacer-->
+<div class="field">
+    <label class="label is-normal">Domain</label>
+    <div class="control has-icons-left has-icons-right">
+      <input class="input is-normal" placeholder="http URL">
+    </div>
+  </div>
+<!-- Quick field spacer-->
+<div class="field">
+    <label class="label is-normal">Domain</label>
+    <div class="control has-icons-left has-icons-right">
+      <input class="input is-normal" placeholder="http URL">
+    </div>
+  </div>
+<!-- Quick field spacer-->
+<div class="field">
+    <label class="label is-normal">Domain</label>
+    <div class="control has-icons-left has-icons-right">
+      <input class="input is-normal" placeholder="http URL">
+    </div>
+  </div>
+<!-- Quick field spacer-->
 
-
-        <section class="info">
-            <a lass="smaller" target="_self" href="https://samtoohey.xyz/cache-monster/"> right click me for info</a>
-        </section>
+</section>
+ <section class="footer">
+  <button id="runevent">Run S&R</button>
+   </br>
+    <a lass="smaller" target="_self" href="https://samtoohey.xyz/wpsr/"> right click me for help & info</a>
+ </section>
         
-        <script src="popup.js" async defer></script>
+        <script src="script.js" async defer></script>
     </body>
 </html>
