--- a/popup.html
+++ b/popup.html
@@ -16,61 +16,61 @@
 <!-- Domain Fields (Eight in Total)-->
 <section class="domaincontainer">
             <div class="field">
-              <label class="label is-normal">Domain</label>
+              <label class="labelIsNormal">Domain</label>
               <div class="control has-icons-left has-icons-right">
                 <input class="input is-normal" placeholder="http URL">
               </div>
             </div>
         <!-- Quick field spacer-->
         <div class="field">
-            <label class="label is-normal">Domain</label>
+            <label class="labelIsNormal">Domain</label>
             <div class="control has-icons-left has-icons-right">
               <input class="input is-normal" placeholder="http URL">
             </div>
           </div>
       <!-- Quick field spacer-->
       <div class="field">
-        <label class="label is-normal">Domain</label>
+        <label class="labelIsNormal">Domain</label>
         <div class="control has-icons-left has-icons-right">
           <input class="input is-normal" placeholder="http URL">
         </div>
       </div>
   <!-- Quick field spacer-->
-  <div class="field">
-    <label class="label is-normal">Domain</label>
-    <div class="control has-icons-left has-icons-right">
-      <input class="input is-normal" placeholder="http URL">
-    </div>
-  </div>
-<!-- Quick field spacer-->
-<div class="field">
-    <label class="label is-normal">Domain</label>
-    <div class="control has-icons-left has-icons-right">
-      <input class="input is-normal" placeholder="http URL">
-    </div>
-  </div>
-<!-- Quick field spacer-->
-<div class="field">
-    <label class="label is-normal">Domain</label>
-    <div class="control has-icons-left has-icons-right">
-      <input class="input is-normal" placeholder="http URL">
-    </div>
-  </div>
-<!-- Quick field spacer-->
-<div class="field">
-    <label class="label is-normal">Domain</label>
-    <div class="control has-icons-left has-icons-right">
-      <input class="input is-normal" placeholder="http URL">
-    </div>
-  </div>
-<!-- Quick field spacer-->
-<div class="field">
-    <label class="label is-normal">Domain</label>
-    <div class="control has-icons-left has-icons-right">
-      <input class="input is-normal" placeholder="http URL">
-    </div>
-  </div>
-<!-- Quick field spacer-->
+        <div class="field">
+          <label class="labelIsNormal">Domain</label>
+          <div class="control has-icons-left has-icons-right">
+            <input class="input is-normal" placeholder="http URL">
+          </div>
+        </div>
+      <!-- Quick field spacer-->
+      <div class="field">
+          <label class="labelIsNormal">Domain</label>
+          <div class="control has-icons-left has-icons-right">
+            <input class="input is-normal" placeholder="http URL">
+          </div>
+        </div>
+      <!-- Quick field spacer-->
+      <div class="field">
+          <label class="labelIsNormal">Domain</label>
+          <div class="control has-icons-left has-icons-right">
+            <input class="input is-normal" placeholder="http URL">
+          </div>
+        </div>
+      <!-- Quick field spacer-->
+      <div class="field">
+          <label class="labelIsNormal">Domain</label>
+          <div class="control has-icons-left has-icons-right">
+            <input class="input is-normal" placeholder="http URL">
+          </div>
+        </div>
+      <!-- Quick field spacer-->
+      <div class="field">
+          <label class="labelIsNormal">Domain</label>
+          <div class="control has-icons-left has-icons-right">
+            <input class="input is-normal" placeholder="http URL">
+          </div>
+        </div>
+      <!-- Quick field spacer-->
 
 </section>
  <section class="footer">
