--- a/popup.html
+++ b/popup.html
@@ -74,7 +74,7 @@
 
 </section>
  <section class="footer">
-  <button id="runevent">Run S&R</button>
+  <button id="runevent">Process</button>
    </br>
     <a lass="smaller" target="_self" href="https://samtoohey.xyz/wpsr/"> right click me for help & info</a>
  </section>
